--- a/pom.xml
+++ b/pom.xml
@@ -199,12 +199,12 @@
                 <artifactId>replacer</artifactId>
                 <version>1.5.3</version>
                 <executions>
-                    <execution>
+<!--                     <execution>
                         <phase>process-sources</phase>
                         <goals>
                             <goal>replace</goal>
                         </goals>
-                    </execution>
+                    </execution> -->
                 </executions>
                 <configuration>
                     <ignoreMissingFile>false</ignoreMissingFile>
@@ -460,6 +460,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 		        <version>3.11.0</version>
+		        <configuration>
+		          <linkXref>true</linkXref>
+		          <sourceEncoding>utf-8</sourceEncoding>
+		          <minimumTokens>25</minimumTokens>
+		        </configuration>
 			</plugin>
 			</plugins>
     </reporting>
