--- a/pom.xml
+++ b/pom.xml
@@ -466,7 +466,24 @@
 		          <minimumTokens>25</minimumTokens>
 		        </configuration>
 			</plugin>
-			</plugins>
+			<!--  Cobertura 플러그인 -->
+			<plugin>
+	      	  <groupId>org.codehaus.mojo</groupId>
+	       	 <artifactId>cobertura-maven-plugin</artifactId>
+	       	 <version>2.7</version>
+	       	 <configuration>
+	          <instrumentation>
+	            <ignores>
+	              <ignore>com.example.boringcode.*</ignore>
+	            </ignores>
+	            <excludes>
+	              <exclude>com/example/dullcode/**/*.class</exclude>
+	              <exclude>com/example/**/*Test.class</exclude>
+	            </excludes>
+	          </instrumentation>
+	        </configuration>
+	      </plugin>
+		</plugins>
     </reporting>
 
     <profiles>
