--- a/pom.xml
+++ b/pom.xml
@@ -472,15 +472,9 @@
 	       	 <artifactId>cobertura-maven-plugin</artifactId>
 	       	 <version>2.7</version>
 	       	 <configuration>
-	          <instrumentation>
-	            <ignores>
-	              <ignore>com.example.boringcode.*</ignore>
-	            </ignores>
-	            <excludes>
-	              <exclude>com/example/dullcode/**/*.class</exclude>
-	              <exclude>com/example/**/*Test.class</exclude>
-	            </excludes>
-	          </instrumentation>
+	          <formats>
+	          	<format>xml</format>
+	          </formats>
 	        </configuration>
 	      </plugin>
 		</plugins>
